Update randomizer logic for staff breaking rocks.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -38,6 +38,8 @@ Graphics:
 
 
 Current tasks:
+    - Don't show Staff Tower instructions multiple times.
+
     - Tasks before next major release
         - Update save statue dialog
             - jade city
