--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -38,6 +38,9 @@ Graphics:
 
 
 Current tasks:
+    - Fix bad jump in forest temple where you can land on a chest.
+    - bad lava tile in first floor of forge
+
     - Tasks before next major release
         - When hero/clone is falling into a pit, draw it behind all other sprites (on top of the background).
             - Try using getDrawPriority to apply this to clone, we may need a new priority 'afterBackground' to force it to draw on top of all background elements (for example, it should be drawn on top of pit entrance objects).
