--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -38,6 +38,10 @@ Graphics:
 
 
 Current tasks:
+    - Make possessed enemies that can damage you in spirit world more obvious.
+
+    - Add ladder to exterior of staff tower that becomes visible once the elevator is repaired.
+
     - Replace inventory tab with editor UI that uses the main inventory screen
         - Missing items are drawn faded when editing is on.
         - Clicking an item cycles from 0 -> 1 -> 2 -> 0
