--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -38,7 +38,13 @@ Graphics:
 
 
 Current tasks:
-    - Finish replacing bad walls in the overworld (south and east of the lake, south and east edges of the map)
+    - Fix pushing pots in waterfall village is sometimes harder than it should be
+        - Maybe it is prioritizing grabbing the wall instead of the pot sometimes?
+
+    - Map improvements
+        - Add door icon for normal cave entrances.
+        - Add arrow icon for open entrances.
+        - Add closed chest icon for unopened chests.
 
     - Add ladder to exterior of staff tower that becomes visible once the elevator is repaired.
 
