--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -38,16 +38,15 @@ Graphics:
 
 
 Current tasks:
-    - Add save point before Rival 2 fight.
-        - Add hint mechanic when reviving at statues based on current game state
-        - Suppress Rival 2 fight intro dialogue after the first time you encounter them.
-            - If this flag is set but the rival is not defeated, then show the hint on reviving at the lake tunnel statue.
-            - `
-                None of your attacks can reach the Spirit World.
-                {|}Maybe you can find a way to turn your opponent's attacks against them.
-            `
+    - Add hint mechanic when reviving at statues based on current game state
+    - Suppress Rival 2 fight intro dialogue after the first time you encounter them.
+        - If this flag is set but the rival is not defeated, then show the hint on reviving at the lake tunnel statue.
+        - `
+            None of your attacks can reach the Spirit World.
+            {|}Maybe you can find a way to turn your opponent's attacks against them.
+        `
 
-    - Fix: Tree Village dialogue text shuold be replaced in randomizer if possible.
+    - Fix: Tree Village dialogue text should be replaced in randomizer if possible.
     - Destroy bushes that the clone lands on.
     - Fix flames can go up ledges.
 
