--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -38,8 +38,21 @@ Graphics:
 
 
 Current tasks:
+    - Change chakram cue to use a tutorial.
+    - Adjust beetle boss to not leave the screen as much.
+        - Reduce the scale by 1?
+    - Add mute button somewhere, possibly in the page outside of the game.
+
+    - Check ice puts top left gauntlet room in logic (by freezing pots).
+    - Change teleportation in randomizer to use barrier burst effect and just appearing instead of falling.
+    - Hero should be in foreground when falling from the sky until they are < ~48 pixels off the ground.
+        - Use the lowest z-value that still looks good when falling in front of tree foreground layers.
     - Fix: Tree Village dialogue text should be replaced in randomizer if possible.
+    - Remove Rival dialogue during first encounter when randomizer is enabled.
+        "Don't make me get the Elder" still displays when opening the door.
+
     - Destroy bushes that the clone lands on.
+    - Unfreezing doors should not play the door opening sound effect.
     - Fix flames can go up ledges.
 
     - Improve helix
