--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -4,8 +4,6 @@ Known Bugs:
     - Enemies can get trapped inside the Staff Tower graphics if they are in the are it occupies when it is created.
         - Should probably kill enemies in this area when setting up the tower.
 
-    - Door closing sound plays while in the title screen
-        - Maybe just disable playAreaSound in the title scene or only play this sound if the player passes through the door and it closes behind them.
     - Teleporting while grabbing a pot with astral projection can make you face south but still be grabbing the pot
         - Probably stop grabbing with projection when teleporting.
     - Enemies hit in the spirit world make noise when taking damage
@@ -36,7 +34,26 @@ Graphics:
 
 
 Current tasks:
+    - Fix doors closed as you walk into them.
+        - Good example is walking into the key room NW from the big chest in tomb.
+        - I think we update doors once on creating the area, let's go ahead and detect if the hero is walking into a door then
+            - render the door open if the hero + 16 *dx/dy intersected the door object.
+        - Play door open/closed sounds FX when it changes whether it is open based on the player being over it.
+
     - Fix audio restarts when going under water during the frost beast fight.
+
+    - Improve dialogue display
+        - animate lines in one at a time every ~40ms
+            - instantly show the full page when pressing a button to advance text.
+        - animate lines moving up for each page when there is not an explicit break {|} and stop when the last line is at the bottom.
+            - instantly move the newest line to the top when pressing a button to advance the dialogue so it can be skipped through quickly.
+
+    - peach cave narrative
+        - Add a message to the chakram chest if you check it after opening it.
+        - Add dialogue after defeating the beetle boss
+            *A voice echoes through the cave*
+            {|}Thank you for saving me.
+            [-]
 
     - Improve helix
         - Switch to wooden graphics
@@ -643,7 +660,6 @@ Generic boss improvements
     - Add vulnerable phases for bosses where they take ~5x damage, increase boss health by ~2x
 
 Lava improvements:
-    - Add new graphic for solidifed lava
     - Eventually we might want to make this temporary.
 
 Misc improvements
@@ -701,10 +717,6 @@ At some point I should write tests to validate certain things like:
 Clone improvements
     Add particle effects when using the clone tool (+animation eventually)
 
-Additional Clone Tool Behavior:
-    Charging the clone 1 level adds elements to the clones weapon/tools/explosion.
-    Charging the clone 1 level without elements makes it invulnerable for 4 seconds.
-
 Additional Bow Behavior:
     Arrows should have stuck frames for diagonals or stick out orthoganal to whatever they hit.
     Charge level 2 creates an elemental explosion
@@ -717,9 +729,6 @@ Peach Cave Improvements:
     - Add boss:
         - Spawns eggs
         - Drains light and regains a bit of health for every 25% lost
-
-Dungeon 1 Improvements:
-    - Update arrow turret graphics.
 
 Golem Boss Improvements:
     - Tighten up timing when switching between attacks
@@ -734,19 +743,15 @@ Golem Boss Improvements:
 Dungeon 2 Improvements:
     - Add more uses of spirit sight:
         - See actual elemental beasts in the front room where the statues are located.
-        - Some kind of optional spirit sight puzzle for a peach piece.
 
 Dungeon 3 Improvements:
-    - Add a required progress puzzle defeating enemies with rolling stones using spirit sight.
     - Add new enemies.
-    - Make the guardian's projection use more interesting attacks.
     - Animate the ents when they attack.
 
 River Temple Improvements:
     - Some underwater enemies
     - Some crab enemies with ice shells that require fire element to defeat
-    - Floating ice spike obstacles that hurt you when floating into them and prevent passing through.
-        - Allow swimming over stones and then use these to prevent swimming movement where it makes sense.
+    - Allow swimming over low walls, use ice spikes to block paths if necessary.
     - Maybe torches should stay lit during the boss fight once turned on.
     - Add special behavior for frozen doors instead of having two door objects.
 
@@ -763,9 +768,7 @@ Staff Tower Improvements
 
 
 Crater Improvements
-    - Add animation for draining lava
-        - Add a layer for each frame of the animation, but only on the screen lava can be drained on
-        - Run a script that switches to each frame with a fairly quick fade transition.
+    - Add additional lava animations.
     - Add platforms floating on lava.
     - Add peg switches that require hitting with the staff to activate, replace all regular switches with these.
     - Add Flame Guardian enemies
@@ -827,15 +830,10 @@ Improve Tool Selection:
     - Display a letter attached to the selection based on the button/keyboard key.
 
 Additional Staff Behavior:
-    - The sides of the staff should function as a wall rather than open ground.
     Charging the staff does a very large spin attack that knocks enemies away.
         Lvl 2 charge is a screen wide attack the applies damage+element to all enemies.
     Top N pixels of character should be drawn on foreground as well so that it appears in front of staff when facing north.
         - Probably should disable staff when character is standing on any tiles marked with low ceiling just in case.
-
-Some puzzle ideas:
-    - A puzzle where 4 switches need to be hit in 200ms, you can blow up the clone in the middle to activate all at once.
-    - If we place a block on top of a switch that toggles on release, we can make a door that requires you to push the block off of the switch.
 
 Animate hearts refilling
 
@@ -845,97 +843,3 @@ Idea:
     Objects you can bounce off of when jumping
         - Just make them solid and knock the player back a bit if the player's y velocity is >= some value?
 
-Support 64x64 super tiles for world map. Or maybe just 48x48.
-
-Possible tool: Leather gloves protect you from thorn bushes.
-Possible tool: Leather boots let you walk on thorny ground without taking damage.
-
-Paths to Elemental Beast Dungeons:
-
-River Temple:
-    (Implemented) Iron Boots(Waterfall Tower) -> Peach Cave -> Underwater Entrance
-    Cloud Boots(Forest Temple) + Fire(Crater) -> Crater sky path to Temple roof opens after defeating Fire Elemental
-    Cloud Boots(Forest Temple) + Lightning(Staff Tower) -> Tower B sky path connects to Temple roof
-
-
-Staff Tower:
-    Fire(Crater) -> Blow up pots in front of escalator using fire on explosive plants
-    (Implemented) Clone(Forest Temple) -> Blow up pots in front of escalator with clone
-    Ice(River Temple) -> Use ice magic to freeze the down escalator and walk up it.
-    (Implemented) Cloud Boots(Forest Temple) -> Use cloud boots to walk up the down escalator
-    Cloud Boots(Forest Temple) -> Sky path from Helix to Tower Balcony
-
-Crater:
-    (Implemented) Cloud Boots(Forest Temple) -> Sky path from Helix to Crater Peak
-    Cloud Boots(Forest Temple) + Tower Staff(Staff Tower) + Ice(River Temple) =>  Tower B Sky path connects to Crater Peak
-    Ice(River Temple) -> Use Ice to pass lava in cave to Crater Peak
-
-
-Dungeon flavor philosophy:
-    All Vanara structures are part of the Vanara ship and related to some functionality, such as the regeneration pods.
-    All Native structures are built to native spirit gods who functioned as servants to the old native spirit beings and were created for specific purposes like resource harvesting, processing and crafting.
-
-
-Ability Locations:
-# Prologue
-    weapon 1            Peach Cave Chest
-    catEyes             Peach Cave Boss
-# Starting Dungeons
-    bow                 Vanara Village
-    roll                Vanara Tomb Chest
-    spiritSight         Vanara Tomb Boss
-    gloves              Summoner Ruins Chest
-    astralProjection    Summoner Ruins Boss
-    spiritCloak         Cocoon Chest
-    teleportation       Cocoon Boss
-# Treasure Dungeons
-    cloudBoots          Forest Temple Chest
-    clone               Forest Temple Boss
-    ironBoots           Waterfall Tower Chest
-    spiritCloak 2       Waterfall Tower Boss
-    True Sight          Gauntlet Chest
-    ironSkin            Gauntlet Boss
-    gloves 2            Forge Chest
-    goldMail            Forge Boss
-    roll 2              Cloud Temple Chest
-    nimbusCloud         Cloud Temple Boss
-    bow 2               Holy Sanctum Chest
-    phoenixCrown        Holy Sanctum Boss
-# First Quest Dungeon
-    staff               Helix Chest
-    weapon 2            Helix Boss
-# Middle Quest Dungeons
-    fireBlessing        Crater Big Chest
-    fire                Crater Boss Flame Beast
-    waterBlessing       River Temple Big Chest
-    ice                 River Temple Boss Frost Beast
-    lightning           Staff Tower Boss Storm Beast
-    staff 2             Staff Tower "Chest" (after boss)
-    charge 1            Acquired with first Element
-    charge 2            Acquired with third Element
-# Final Quest Dungeon
-    clone 2             Hidden Lab
-
-Dungeon 1: Vanara Tomb (fortress around the Cocoon)
-    - Traps+locks to keep intruders away. Need to use bow to enter
-        - Someone was stealing Vanara remains
-    - Built around a suspended animation capsule
-        - The Vanara population is too large so they rotate members in and out of suspended animation.
-        - Suspension pods erase Vanara memories to prevent then from becoming restless.
-        - Pods also regenerate Vanara bodies, which would break down without nurishment from the spirit world.
-        - Vanara village population is 20-30 individuals at a time. There are 100-300 total, most suspended.
-    - The goal of the dungeon is to meet with the care taker who looks after and maintains the suspended Vanara.
-        - The original Vanara crew rotate members into the care taker role once every X years.
-    - A facade is built aroaund the structure to disguise it as a mundane structure
-        - The Vanara village posts guards in addition to the traps to keep people out
-    - MCs father refused to go back to sleep, having fallen in love with MCs mother and not wanting to forget about her.
-
-Jade Palace:
-    - Boss Reward: Phoenix Feather
-        Uses a feather from a legender spirit beast that could survive on its own in the material world and once threatened to destroy the world.
-        The War God wants to combine science and Vanara biology to make a new "Void Phoenix" to replicate the old beast.
-        An ancestor of the MC+Hero defeated the original Phoenix
-        The feather is kept in the Jade palace, too dangerous to use but too precious to destroy
-
-River Temple:
-    - No NPCs here, this was the old Fertility Temple, but it was destroyed by the Vanara Ship crashing. The survivors all moved to the new Fertility Temple near the forest (Forest Temple).
